syntax = "proto3";
// import "proto/include/google/protobuf/any.proto";
package rbac;

service GrpcService {
  rpc UpdateGrpcMethods(UpdateMethodsRequest) returns (stream Method) {}
  rpc ListGrpcServer(GetServiceRequest) returns (stream Method) {}
  rpc ListServicesWithFullPath(GetServiceRequest) returns (stream Method) {}
  rpc ListMethodsWithFullPath(GetServiceRequest) returns (stream Method) {}
  rpc GetServiceListOnServer(GetServiceRequest) returns (stream Method) {}
  rpc GetMethodsListInService(GetServiceRequest) returns (stream Method) {}
}

service RoleService {
  rpc ListRole(FindRequest) returns (stream Role) {}
  rpc GetOneRole(GetRequest) returns (Role) {}
  rpc CreateRole(Role) returns (Role) {}
  rpc UpdateRoleById(GetRequest) returns (Role) {}
  rpc DeleteRole(FindRequest) returns (DeleteResult) {}
  rpc DeleteRoleById(GetRequest) returns (DeleteResult) {}
  rpc GetRoleAccessesById(Role) returns (Role) {}
  rpc AddAccessToRoleByRid(Role) returns (Role) {}
  rpc DelAccessToRoleByRid(Role) returns (Role) {}
}

service GroupService {
  rpc ListGroup(FindRequest) returns (stream Group) {}
  rpc GetOneGroup(GetRequest) returns (Group) {}
  rpc CreateGroup(Group) returns (Group) {}
  rpc UpdateGroupById(GetRequest) returns (Group) {}
  rpc DeleteGroup(FindRequest) returns (DeleteResult) {}
  rpc DeleteGroupById(GetRequest) returns (DeleteResult) {}
  rpc GetGroupAccessesById(Group) returns (Group) {}
  rpc AddRoleIdsToGroupByGid(Group) returns (Group) {}
  rpc DelRoleIdsToGroupByGid(Group) returns (Group) {}
}

service RbacService {
  rpc VerifyAccessRightWithRids(VerifyWithIdsRequest) returns (Rbac) {}
  rpc VerifyAccessRightWithGids(VerifyWithIdsRequest) returns (Rbac) {}
}

message GetServiceRequest {
  string package = 1;
  string service = 2;
  string path = 3;
  int32 offset = 4;
  int32 limit = 5;
}

message Method {
  string file = 1;
  string package = 2;
  string service = 3;
  string path = 4;
  string name = 5;
  string type = 6;
  string servicePath = 7;
}

message UpdateMethodsRequest {
  string fileName = 1;
  string format = 2;
  repeated Method methods = 3;
}

message FindRequest { string query = 1; }

message GetRequest {
  string id = 1;
  string query = 2;
}

message CreateRbacRequest { string name = 1; }

message UpdateRbacRequest {
  string query = 1;
  CreateRbacRequest obj = 2;
}

message UpdateRbacByIdRequest {
  string id = 1;
  CreateRbacRequest obj = 2;
}

message DeleteResult {
  bool state = 1;
  int32 num = 2;
}

message Role {
  string id = 1;
  string name = 2;
  string createdAt = 13;
  string updatedAt = 14;
  string deletedAt = 15;
}

message Group {
  string id = 1;
  string name = 2;
  string createdAt = 13;
  string updatedAt = 14;
  string deletedAt = 15;
}

message Rbac {
  string id = 1;
  string name = 2;
  string createdAt = 13;
  string updatedAt = 14;
  string deletedAt = 15;
}

message VerifyWithIdsRequest {
  string fullPathMethod = 1;
  repeated int32 ids = 2;
}
